[package]
name = "nupoi"
version = "0.1.0"
edition = "2021"
authors = ["KotaDangisho <dangisho99@gmail.com>"]
description = "Rust CLI nupoi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.7", features = ["derive"]}